--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,7 @@ body {
 .modal {
   display: none;
   position: fixed;
-  z-index: 1;
+  z-index: 1000; /* Увеличиваем z-index */
   left: 0;
   top: 0;
   width: 100%;
@@ -108,7 +108,8 @@ body {
 }
 
 #login,
-#userForm {
+#userForm,
+#register {
   position: absolute;
   top: 50%;
   left: 50%;
