--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,7 @@ body {
 .modal {
   display: none;
   position: fixed;
-  z-index: 1000; /* Увеличиваем z-index */
+  z-index: 1000;
   left: 0;
   top: 0;
   width: 100%;
@@ -51,13 +51,36 @@ body {
   background-color: rgba(0, 0, 0, 0.5);
 }
 
-/* Стили для содержимого модального окна */
 .modal-content {
-  background-color: #fefefe;
-  margin: 15% auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
   padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
+  border-radius: 10px;
+  text-align: center;
+}
+
+.modal-content h2 {
+  margin-bottom: 10px;
+}
+
+.modal-content p {
+  margin-bottom: 20px;
+}
+
+.modal-content button {
+  background-color: #4caf50;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.modal-content button:hover {
+  background-color: #45a049;
 }
 
 /* Стили для кнопки */
